--- a/Styles/checkout.css
+++ b/Styles/checkout.css
@@ -597,6 +597,7 @@ h2:hover:after, h3:hover:after {
     justify-content: center;
     backdrop-filter: blur(5px);
     animation: fadeIn 0.3s ease;
+    margin-left: 35%;
 }
 
 .modal-content {
